[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "Real-world email triage OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "openai>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.openenv]
name = "email-triage-v1"
version = "1.0.0"
entry_point = "env:EmailTriageEnv"
tasks = [0, 1, 2]